--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link type="text/css" href="./index.css">
+        <link rel="stylesheet" href="index.css">
         <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
     </head>
     <body>
