--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,13 @@
 <html>
     <head>
-        <link type="text/css" href="./index.css">
+        <link rel="stylesheet" href="index.css">
         <script src="https://cdn.jsdelivr.net/npm/comfy.js@latest/dist/comfy.min.js"></script>
     </head>
     <body>
-        <p class="gif"></p>
-        <ul id="container" />
+        <section class="alerts">
+            <div class="gif"></div>
+            <ul id="container" />
+        </section>
     </body>
     <script src="./queue.js"></script>
     <script src="./gif.js"></script>
