add url parameter to enable wss socket protocol

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,11 @@
     <script src="./gif.js"></script>
     <script>
       // change to WSS if online and WS if local
-      // when hosting online add ?remote=true to the end
-      // of the url to toggle wss
+      // add ?secure=true to the end of the url to use wss
       const urlParams = new URLSearchParams(location.search);
       const protocol = 
-        urlParams.has("remote") 
-        && urlParams.get('remote').toLowerCase() == 'true'
-            ? "wss" : "ws";
+        urlParams.has("secure") && urlParams.get('secure').toLowerCase() == 'true'
+        ? "wss" : "ws";
 
       let socket = new WebSocket(`${protocol}://${location.host}/socket`)
       socket.onopen = function(e) {
