--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script src="./gif.js"></script>
     <script>
       // change to WSS if online and WS if local
-      let socket = new WebSocket(`ws://${location.host}/socket`)
+      let socket = new WebSocket(`wss://${location.host}/socket`)
       socket.onopen = function(e) {
           console.log("connection has been established")
       }
